testsuite/vhdl/parser_rules/test_data/expression_failure/expression_failure_000.expected
expression_failure/expression_failure_000.input:2:20: parse error: Test Suite Full Match Error! Unparsed input left!
"0011" nand "0010" nand "1000"
                   ^ <<-- here
